--- a/content/acknowledgements.tex
+++ b/content/acknowledgements.tex
@@ -1,7 +1,9 @@
 \chapter*{Acknowledgements}
 
-%I still recall my first day at ETH, some six years ago. I was seventeen, had very little idea what would await me, and was quite nervous. I spoke broken german, and had no idea what to expect from university life. The first year was tough, particular finding the pace in the first weeks.
+I still recall my first day at ETH, some six years ago. I was seventeen, had very little idea what would await me, and was quite nervous. I spoke broken german, and had no idea what to expect from university life. Six years latter I could not be happier with the choice I made. It has been a journey which taught me a lot, and I am grateful for the many people who have been part of it.
 
-%I would first and foremost like to thank my supervisor Sebastian for his guidance and support throughout the project. He guided me through the complex and sometimes very subtle \TFNP\ landscape and was always available for a chat or a meeting. His input, and the many discussions we had, were invaluable to the project. I would also like to thank Professor Gärtner for the oppurtunity to work on this project in his group.
+I would first and foremost like to thank my supervisor Sebastian for his guidance and support throughout the project. He guided me through the complex and sometimes very subtle \TFNP\ landscape and was always available for a chat or a meeting. His input, and the many discussions we had, were invaluable to the project. I would also like to thank Professor Gärtner for the oppurtunity to work on this project in his group.
 
-%	{\raggedleft\ Nils Jensen,\\ Zürich, \today\par}
+I would also like to thank my family for their support throughout my studies. They have always been there for me, and I am grateful for that. I would also like to thank my friends, who have been a great support throughout the years, and while writing this thesis.
+
+	{\raggedleft\ Nils Jensen,\\ Zürich, \today\par}
