--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % Load the kaobook class
 \documentclass[
 	fontsize=11pt, % Base font size
-	twoside=false, % Use different layouts for even and odd pages (in particular, if twoside=true, the margin column will be always on the outside)
+	twoside=true, % Use different layouts for even and odd pages (in particular, if twoside=true, the margin column will be always on the outside)
 	%open=any, % If twoside=true, uncomment this to force new chapters to start on any page, not only on right (odd) pages
 	secnumdepth=2, % How deep to number headings. Defaults to 1 (sections)
 ]{styling/kaobook}
